--- a/css/main.css
+++ b/css/main.css
@@ -20,4 +20,9 @@ div a {
   padding: 0.4em 0.75em 0.5em;
   color: #333;
   border-radius: 8px;
+  margin: 1.5rem;
+}
+
+img {
+  max-width: 25em;
 }
