--- a/css/main.css
+++ b/css/main.css
@@ -11,8 +11,7 @@ html {
 }
 
 h1 {
-  display: inline;
-  text-align: center;
+  display: inline block;
   margin: 1.5rem;
 }
 span {
@@ -31,5 +30,5 @@ div a {
 img {
   max-width: 25em;
   float: left;
-  padding: 2em;
+  padding: 1em;
 }
