--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,13 @@ html {
 h1 {
   display: inline block;
   margin: 1.5rem;
+  font-size: 400;
 }
+
+body{
+  vertical-align: middle;
+}
+
 span {
   color: #333;
 }
