--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,6 @@ html {
 
 h1 {
   margin: 1.5rem;
-  font-size: 400;
   padding: 1rem;
 }
 
@@ -26,7 +25,13 @@ span {
   color: #333;
 }
 
-div a {
+div {
+  display: inline block;
+  vertical-align: middle;
+  max-width: 25rem;
+}
+
+.button {
   border: 3px solid #333;
   text-decoration: none;
   padding: 0.4em 0.75em 0.5em;
