--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,15 @@ html {
   box-sizing: inherit;
 }
 
+img {
+  max-width: 25em;
+  display: inline-block;
+  width: 100%;
+  float: left;
+  padding: 1em;
+  text-align: center;
+}
+
 h1 {
   margin: 1.5rem;
   padding: 1rem;
@@ -21,32 +30,19 @@ body{
   color: #333;
 }
 
-span {
-  color: #333;
-}
-
 div {
   display: inline block;
   vertical-align: middle;
   max-width: 25rem;
 }
 
-.button {
+.btn {
   border: 3px solid #333;
   text-decoration: none;
   padding: 0.4em 0.75em 0.5em;
   color: #333;
   border-radius: 8px;
   margin: 1.5rem;
-}
-
-img {
-  max-width: 25em;
-  display: inline-block;
-  width: 100%;
-  float: left;
-  padding: 1em;
-  text-align: center;
 }
 
 a:hover {
