--- a/css/main.css
+++ b/css/main.css
@@ -5,14 +5,13 @@ html {
   background-color: #f2f2f2;
 }
 
-
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
 img {
   max-width: 25em;
-  display: inline-block;
+  display: none;
   width: 100%;
   float: left;
   padding: 1em;
@@ -24,11 +23,11 @@ h1 {
   padding: 1rem;
 }
 
-body{
+body {
   vertical-align: middle;
   text-align: left;
   color: #333;
-  margin: 2rem;
+  margin: 0;
 }
 
 div {
