--- a/css/main.css
+++ b/css/main.css
@@ -9,25 +9,24 @@ html {
   box-sizing: inherit;
 }
 
-img {
-  max-width: 25em;
-  display: none;
-  width: 100%;
-  float: left;
-  padding: 1em;
-  text-align: center;
-}
-
-h1 {
+h2 {
   margin: 1.5rem;
-  padding: 1rem;
+  padding: 2rem;
 }
 
 body {
   vertical-align: middle;
   text-align: left;
   color: #333;
-  margin: 0;
+}
+
+img {
+  max-width: 25em;
+  display: inline-block;
+  width: 100%;
+  float: left;
+  padding-top: 2em;
+  text-align: center;
 }
 
 div {
@@ -39,9 +38,14 @@ div {
 .btn {
   border: 3px solid #333;
   text-decoration: none;
-  padding: 0.4em 0.75em 0.5em;
+  padding: .4em .75em .5em;
   color: #333;
   border-radius: 8px;
+  margin: 1.5rem;
+}
+
+p {
+  padding-bottom: 2em;
   margin: 1.5rem;
 }
 
